--- a/pages/grammar/grammar_usage_of_tenses.html
+++ b/pages/grammar/grammar_usage_of_tenses.html
@@ -11,7 +11,7 @@
 		<meta name="msapplication-square150x150logo" content="/mstile-150x150.png" />
 		<meta name="msapplication-wide310x150logo" content="/mstile-310x150.png" />
 		<meta name="msapplication-square310x310logo" content="/mstile-310x310.png" />
-		<meta property="og:image" content="http://farm8.staticflickr.com/7614/16636691679_23ba2b4f50_o.jpg" />
+		<meta property="og:image" content="http://farm9.staticflickr.com/8727/16942673956_c465a2ae55_o.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="robots" content="index,follow" />
 		<meta name="author" content="Serguei Shimansky englishextra@yandex.ru" />
@@ -34,7 +34,7 @@
 		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
 		<link rel="manifest" href="/manifest.json" />
 		<link rel="yandex-tableau-widget" href="/yandex-tableau.json" />
-		<link rel="image_src" href="http://farm8.staticflickr.com/7614/16636691679_23ba2b4f50_o.jpg" type="image/jpeg" title="Английский без&#160;регистрации" />
+		<link rel="image_src" href="http://farm9.staticflickr.com/8727/16942673956_c465a2ae55_o.jpg" type="image/jpeg" title="Английский без&#160;регистрации" />
 		<link rel="me" type="text/html" href="https://www.youtube.com/user/shimanskybiz" />
 		<link rel="me" type="text/html" href="https://github.com/englishextra" />
 		<link rel="me" type="text/html" href="https://vimeo.com/user20994901" />
@@ -104,7 +104,7 @@
 					<div class="col span_12 cf">
 						<h1>Употребление английских времен</h1><p class="bolder">В английском языке шестнадцать времен в&#160;активном залоге, в&#160;пассивном залоге&#160;&#8212; десять. Точнее было&#160;бы назвать их&#160;конструкциями, которых в&#160;сумме двадцать шесть. Не&#160;стоит сравнивать русские времена с&#160;английскими. Лучше запомнить значение каждой конструкции и&#160;обстоятельства ее&#160;применения.</p>
 						<div class="article-gallery" id="article-gallery">
-							<h2>Галерея</h2><div><a href="//farm8.staticflickr.com/7556/15604404473_27a04e7af6_o.jpg" data-size="5294x1571" data-med="//farm8.staticflickr.com/7556/15604404473_27a04e7af6_o.jpg" data-med-size="5294x1571" data-author=""><img src="//farm8.staticflickr.com/7556/15604404473_080905d105_n.jpg" alt="" /></a></div>
+							<h2>Галерея</h2><div><a href="//farm8.staticflickr.com/7598/16942426316_57b45c0c35_o.jpg" data-size="5294x1571" data-med="//farm8.staticflickr.com/7598/16942426316_57b45c0c35_o.jpg" data-med-size="5294x1571" data-author=""><img src="//farm8.staticflickr.com/7598/16942426316_642875156e_n.jpg" width="320" height="95" alt="" /></a></div>
 						</div>
 						<h2 id="a0">Содержание</h2>
 						<div>
