--- a/pages/reading/reading_the_man_with_the_scar.html
+++ b/pages/reading/reading_the_man_with_the_scar.html
@@ -11,7 +11,7 @@
 		<meta name="msapplication-square150x150logo" content="/mstile-150x150.png" />
 		<meta name="msapplication-wide310x150logo" content="/mstile-310x150.png" />
 		<meta name="msapplication-square310x310logo" content="/mstile-310x310.png" />
-		<meta property="og:image" content="http://farm9.staticflickr.com/8704/16821723021_167de7f183_o.jpg" />
+		<meta property="og:image" content="http://farm9.staticflickr.com/8737/16760209427_26ab6a4420_o.jpg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="robots" content="index,follow" />
 		<meta name="author" content="Serguei Shimansky englishextra@yandex.ru" />
@@ -34,7 +34,7 @@
 		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
 		<link rel="manifest" href="/manifest.json" />
 		<link rel="yandex-tableau-widget" href="/yandex-tableau.json" />
-		<link rel="image_src" href="http://farm9.staticflickr.com/8704/16821723021_167de7f183_o.jpg" type="image/jpeg" title="Английский без&#160;регистрации" />
+		<link rel="image_src" href="http://farm9.staticflickr.com/8737/16760209427_26ab6a4420_o.jpg" type="image/jpeg" title="Английский без&#160;регистрации" />
 		<link rel="me" type="text/html" href="https://www.youtube.com/user/shimanskybiz" />
 		<link rel="me" type="text/html" href="https://github.com/englishextra" />
 		<link rel="me" type="text/html" href="https://vimeo.com/user20994901" />
@@ -104,7 +104,7 @@
 					<div class="col span_12 cf">
 						<h1>The&#160;Man with the&#160;Scar</h1><p class="bolder">&#160;by Somerset W.&#160;Maugham.</p>
 						<div class="article-gallery" id="article-gallery">
-							<h2>Галерея</h2><div><a href="//farm9.staticflickr.com/8562/16038697620_1b8b4b4f41_o.jpg" data-size="600x491" data-med="//farm9.staticflickr.com/8562/16038697620_1b8b4b4f41_o.jpg" data-med-size="600x491" data-author=""><img src="//farm9.staticflickr.com/8562/16038697620_5f3a504831_q.jpg" alt="" /></a><a href="//farm9.staticflickr.com/8652/15606211953_3b7120b1f9_o.jpg" data-size="594x594" data-med="//farm9.staticflickr.com/8652/15606211953_3b7120b1f9_o.jpg" data-med-size="594x594" data-author=""><img src="//farm9.staticflickr.com/8652/15606211953_65de9515bb_q.jpg" alt="" /></a><a href="//farm8.staticflickr.com/7549/15608744683_5953f32270_o.jpg" data-size="600x400" data-med="//farm8.staticflickr.com/7549/15608744683_5953f32270_o.jpg" data-med-size="600x400" data-author=""><img src="//farm8.staticflickr.com/7549/15608744683_24bdb98c9a_q.jpg" alt="" /></a></div>
+							<h2>Галерея</h2><div><a href="//farm9.staticflickr.com/8562/16038697620_1b8b4b4f41_o.jpg" data-size="600x491" data-med="//farm9.staticflickr.com/8562/16038697620_1b8b4b4f41_o.jpg" data-med-size="600x491" data-author=""><img src="//farm9.staticflickr.com/8562/16038697620_5f3a504831_q.jpg" width="150" height="150" alt="" /></a><a href="//farm9.staticflickr.com/8652/15606211953_3b7120b1f9_o.jpg" data-size="594x594" data-med="//farm9.staticflickr.com/8652/15606211953_3b7120b1f9_o.jpg" data-med-size="594x594" data-author=""><img src="//farm9.staticflickr.com/8652/15606211953_65de9515bb_q.jpg" width="150" height="150" alt="" /></a><a href="//farm8.staticflickr.com/7649/16968354675_8693f30ae6_o.jpg" data-size="600x400" data-med="//farm8.staticflickr.com/7649/16968354675_8693f30ae6_o.jpg" data-med-size="600x400" data-author=""><img src="//farm8.staticflickr.com/7649/16968354675_385a9323f7_q.jpg" width="150" height="150" alt="" /></a></div>
 						</div>
 						<h2 id="a0">Содержание</h2>
 						<div>
